--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>主要网页</title>
+    <title>AITTXD</title>
     <style>
         body, html {
             margin: 0;
