--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://chat.sms-pog.tk/"></iframe>
+    <iframe src="http://23.94.223.148:8899/auth/login"></iframe>
 </body>
 </html>
